
VERSION 0.6.4cvs
================

2005-03-28  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/POP3Store.cpp: fixed POP3Store::sendPacket() to send "\r\n"
   in the same packet as the request. This caused problems with some
   servers (thanks to Donald Dade).

 * SConstruct: modified 'msvc' target to generate automatically the
   config file 'config.hpp.msvc'.

2005-03-27  Stefan Uhrig <stefanuhrig@gmx.net>

 * Added Windows platform handlers.

2005-03-27  Vincent Richard  <vincent@vincent-richard.net>

 * messageIdSequence.{cpp|hpp}: added a new basic type "messageIdSequence" for
   a list of message-ids separated by CFWS (used in "References:" field, for
   example).

 * SConstruct: added 'msvc' target to generate MSVC project files.

2005-03-25  Vincent Richard  <vincent@vincent-richard.net>

 * mdn/*.{cpp|hpp}: added support for Message Disposition Notifications (MDN),
   as defined by RFC-3798 and RFC-1892. This is a very first implementation,
   API is subject to changes...

 * Some fixes for Visual C++/Windows.

2005-03-24  Vincent Richard  <vincent@vincent-richard.net>

 * Added 'HACKING' file.

2005-03-23  Vincent Richard  <vincent@vincent-richard.net>

 * messaging/POP3*: fixed incorrect message size. Fixed a bug in
   deleteMessages() when 'to == -1' and last message not being
   deleted (thanks to Stefan Uhrig).

 * SConstruct: fixed compilation/linking problem with g++ and X86-64 on
    static library: added -fPIC/-fpic in compiler flags.

 * messaging/POP3*: added notifications.

 * constants.{cpp|hpp}, contentTypeField.{cpp|hpp}: added support for
   content types and parameters defined in RFC-1892.

2005-03-17  Vincent Richard  <vincent@vincent-richard.net>

 * base.{cpp|hpp}: renamed 'MIME_VERSION' to 'SUPPORTED_MIME_VERSION'.

 * Added "Viewer" example in /examples/viewer: demonstrate the parsing
   capabilities of VMime and it can help when debugging...

2005-03-16  Vincent Richard  <vincent@vincent-richard.net>
