@@ -2,6 +2,11 @@
 VERSION 0.6.4cvs
 ================
 
+2005-03-31  Vincent Richard  <vincent@vincent-richard.net>
+
+ * misc/importanceHelper.{cpp|hpp}: added support for message importance:
+   "X-Priority:" and "Importance:" fields.
+
 2005-03-28  Vincent Richard  <vincent@vincent-richard.net>
 
  * messaging/POP3Store.cpp: fixed POP3Store::sendPacket() to send "\r\n"
